fixed #35 Sidebar minimized always on mobile startup

--- a/src/app/_components/sidebar/sidebar.component.scss
+++ b/src/app/_components/sidebar/sidebar.component.scss
@@ -1,15 +1,36 @@
 @import 'variables';
 @import 'mixins';
+@import "~bootstrap/scss/mixins/breakpoints";
 
 .app-sidebar {
   background-color: crmcolor(main, dark);
   min-width: crmsize(sidebar, width);
   flex-basis: crmsize(sidebar, width);
-  transition: min-width $animation-time-style, flex-basis $animation-time-style;
+  transition: min-width $animation-time-style, flex-basis $animation-time-style, left $animation-time-style;
 
   &.minimized {
     min-width: crmsize(sidebar, minimized);
     flex-basis: crmsize(sidebar, minimized);
+  }
+
+  @include media-breakpoint-down(md) {
+    min-width: crmsize(sidebar, width);
+    max-width: 100%;
+
+    &.minimized {
+      left: -100%;
+    }
+
+    position: fixed;
+    top: crmsize(header, height);
+    left: 0;
+    bottom: 0;
+    z-index: 13;
+    overflow-y: scroll;
+  }
+
+  @include media-breakpoint-down(sm) {
+    min-width: 100%;
   }
 }
 
